// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c8 ESM Modules collects coverage for ESM modules 1`] = `
",bar
--------------------|----------|----------|----------|----------|-------------------|
File                |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
--------------------|----------|----------|----------|----------|-------------------|
All files           |     96.2 |    86.49 |    90.32 |     96.2 |                   |
 bin                |    91.18 |    83.33 |      100 |    91.18 |                   |
  c8.js             |    91.18 |    83.33 |      100 |    91.18 |          25,26,27 |
 lib                |    97.51 |    82.35 |      100 |    97.51 |                   |
  parse-args.js     |    98.46 |       60 |      100 |    98.46 |           107,108 |
  report.js         |    96.69 |    91.67 |      100 |    96.69 |... 10,136,137,138 |
 lib/commands       |      100 |    88.89 |      100 |      100 |                   |
  check-coverage.js |      100 |    92.31 |      100 |      100 |                17 |
  report.js         |      100 |       80 |      100 |      100 |                16 |
 test/fixtures      |    89.04 |    93.75 |       70 |    89.04 |                   |
  async.js          |      100 |      100 |      100 |      100 |                   |
  export.mjs        |    71.43 |      100 |       50 |    71.43 |               2,3 |
  import.mjs        |      100 |      100 |      100 |      100 |                   |
  multiple-spawn.js |      100 |      100 |      100 |      100 |                   |
  normal.js         |       75 |    66.67 |    33.33 |       75 | 14,15,16,18,19,20 |
  subprocess.js     |      100 |      100 |      100 |      100 |                   |
--------------------|----------|----------|----------|----------|-------------------|
,"
`;

exports[`c8 check-coverage allows --check-coverage when executing script 1`] = `
",hey
i am a line of code
what
hey
what
hey
what
hey
--------------------|----------|----------|----------|----------|-------------------|
File                |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
--------------------|----------|----------|----------|----------|-------------------|
All files           |    96.12 |    82.09 |    89.66 |    96.12 |                   |
 bin                |    91.18 |       80 |      100 |    91.18 |                   |
  c8.js             |    91.18 |       80 |      100 |    91.18 |          25,26,27 |
 lib                |    97.51 |    78.13 |      100 |    97.51 |                   |
  parse-args.js     |    98.46 |       60 |      100 |    98.46 |           107,108 |
  report.js         |    96.69 |    86.36 |      100 |    96.69 |... 10,136,137,138 |
 lib/commands       |    97.67 |    82.35 |     87.5 |    97.67 |                   |
  check-coverage.js |      100 |    92.31 |      100 |      100 |                17 |
  report.js         |    92.31 |       50 |       50 |    92.31 |              9,10 |
 test/fixtures      |    90.48 |    92.31 |       75 |    90.48 |                   |
  async.js          |      100 |      100 |      100 |      100 |                   |
  multiple-spawn.js |      100 |      100 |      100 |      100 |                   |
  normal.js         |       75 |    66.67 |    33.33 |       75 | 14,15,16,18,19,20 |
  subprocess.js     |      100 |      100 |      100 |      100 |                   |
--------------------|----------|----------|----------|----------|-------------------|
,ERROR: Coverage for lines (96.12%) does not meet global threshold (101%)
"
`;

exports[`c8 check-coverage allows threshold to be applied on per-file basis 1`] = `
",,ERROR: Coverage for lines (78.33%) does not meet threshold (80%) for lib/commands/check-coverage.js
ERROR: Coverage for lines (75%) does not meet threshold (80%) for test/fixtures/normal.js
"
`;

exports[`c8 check-coverage exits with 0 if coverage within threshold 1`] = `",,"`;

exports[`c8 check-coverage exits with 1 if coverage is below threshold 1`] = `
",,ERROR: Coverage for lines (95.69%) does not meet global threshold (101%)
"
`;

exports[`c8 merges reports from subprocesses together 1`] = `
",first

second

--------------------|----------|----------|----------|----------|-------------------|
File                |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
--------------------|----------|----------|----------|----------|-------------------|
All files           |    84.91 |       72 |    74.07 |    84.91 |                   |
 bin                |    88.24 |       60 |      100 |    88.24 |                   |
  c8.js             |    88.24 |       60 |      100 |    88.24 |       22,25,26,27 |
 lib                |    96.09 |    66.67 |      100 |    96.09 |                   |
  parse-args.js     |    96.92 |    44.44 |      100 |    96.92 |     93,94,107,108 |
  report.js         |    95.36 |    77.78 |      100 |    95.36 |... 10,136,137,138 |
 lib/commands       |    43.02 |       60 |    16.67 |    43.02 |                   |
  check-coverage.js |    21.67 |      100 |        0 |    21.67 |... 56,57,58,59,60 |
  report.js         |    92.31 |       50 |       50 |    92.31 |              9,10 |
 test/fixtures      |    90.48 |    92.31 |       75 |    90.48 |                   |
  async.js          |      100 |      100 |      100 |      100 |                   |
  multiple-spawn.js |      100 |      100 |      100 |      100 |                   |
  normal.js         |       75 |    66.67 |    33.33 |       75 | 14,15,16,18,19,20 |
  subprocess.js     |      100 |      100 |      100 |      100 |                   |
--------------------|----------|----------|----------|----------|-------------------|
,"
`;

exports[`c8 report generates report from existing temporary files 1`] = `
",--------------------|----------|----------|----------|----------|-------------------|
File                |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
--------------------|----------|----------|----------|----------|-------------------|
All files           |    96.12 |    85.51 |    89.66 |    96.12 |                   |
 bin                |    91.18 |    83.33 |      100 |    91.18 |                   |
  c8.js             |    91.18 |    83.33 |      100 |    91.18 |          25,26,27 |
 lib                |    97.51 |    82.35 |      100 |    97.51 |                   |
  parse-args.js     |    98.46 |       60 |      100 |    98.46 |           107,108 |
  report.js         |    96.69 |    91.67 |      100 |    96.69 |... 10,136,137,138 |
 lib/commands       |    97.67 |     87.5 |     87.5 |    97.67 |                   |
  check-coverage.js |      100 |    91.67 |      100 |      100 |                17 |
  report.js         |    92.31 |       75 |       50 |    92.31 |              9,10 |
 test/fixtures      |    90.48 |    92.31 |       75 |    90.48 |                   |
  async.js          |      100 |      100 |      100 |      100 |                   |
  multiple-spawn.js |      100 |      100 |      100 |      100 |                   |
  normal.js         |       75 |    66.67 |    33.33 |       75 | 14,15,16,18,19,20 |
  subprocess.js     |      100 |      100 |      100 |      100 |                   |
--------------------|----------|----------|----------|----------|-------------------|
,"
`;

exports[`c8 report supports --check-coverage, when generating reports 1`] = `
",--------------------|----------|----------|----------|----------|-------------------|
File                |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
--------------------|----------|----------|----------|----------|-------------------|
All files           |    96.55 |    85.51 |     93.1 |    96.55 |                   |
 bin                |    91.18 |       80 |      100 |    91.18 |                   |
  c8.js             |    91.18 |       80 |      100 |    91.18 |          25,26,27 |
 lib                |    97.51 |    82.35 |      100 |    97.51 |                   |
  parse-args.js     |    98.46 |       60 |      100 |    98.46 |           107,108 |
  report.js         |    96.69 |    91.67 |      100 |    96.69 |... 10,136,137,138 |
 lib/commands       |      100 |    88.24 |      100 |      100 |                   |
  check-coverage.js |      100 |    91.67 |      100 |      100 |                17 |
  report.js         |      100 |       80 |      100 |      100 |                16 |
 test/fixtures      |    90.48 |    92.31 |       75 |    90.48 |                   |
  async.js          |      100 |      100 |      100 |      100 |                   |
  multiple-spawn.js |      100 |      100 |      100 |      100 |                   |
  normal.js         |       75 |    66.67 |    33.33 |       75 | 14,15,16,18,19,20 |
  subprocess.js     |      100 |      100 |      100 |      100 |                   |
--------------------|----------|----------|----------|----------|-------------------|
,ERROR: Coverage for lines (96.55%) does not meet global threshold (101%)
"
`;

exports[`c8 reports coverage for script that exits normally 1`] = `
",hey
i am a line of code
what
hey
what
hey
what
hey
-----------|----------|----------|----------|----------|-------------------|
File       |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
-----------|----------|----------|----------|----------|-------------------|
All files  |    83.33 |    85.71 |    66.67 |    83.33 |                   |
 async.js  |      100 |      100 |      100 |      100 |                   |
 normal.js |       75 |    66.67 |    33.33 |       75 | 14,15,16,18,19,20 |
-----------|----------|----------|----------|----------|-------------------|
,"
`;
